BOARD18 2.6.2 Release Notes
 
Changes from 2.6.1 Release:
Implemented fix for Issue 169 - Display game from board18Games.
Implemented fix for Issue 171 - Remove jQuery UI Position

BOARD18 2.6.1 Release Notes
 
Changes from 2.6.0 Release:
Implemented fix for Issue 165 - Remove jQuery Migrate

BOARD18 2.6.0 Release Notes
 
Changes from 2.5.11 Release:
Implemented fix for Issue 163 - Make player name fields "required".
Implemented fix for Issue 164 - Set page size of all BOARD18 admin lists to 20.
Implemented fix for Issue 166 - Require lower case on all Email Addresses.
Added more documentation to the headers of 12 JavaScript files.
Updated players guide to version 2.6

BOARD18 2.5.11 Release Notes
 
Changes from 2.5.10 Release:
Implemented fix for Issue 121 - Add a search feature to "View all games" page. 

BOARD18 2.5.10 Release Notes
 
Changes from 2.5.9 Release:
Implemented fix for Issue 160 - Inadequate Game Name editing in board18New
Implemented fix for Issue 159 - Potential vulnerability to invalid user input 

BOARD18 2.5.9 Release Notes
 
Changes from 2.5.8 Release:
Implemented fix for Issue 153 "Can't view all games"
Implemented change for Issue 96 "Request for 2 new scripts".
Replaced cronCode with new aws-cli backups.
Some minor fixes to error reports and documentation.

BOARD18 2.5.8 Release Notes
 
Changes from 2.5.7 Release:
Implemented fix for Issue 132 “left margin in the player list is missing”.
Corrected links in the README.txt file.
Removed unneeded subscripts from the names of various CSS files.
Removed some left over debug code from tokenCheck.php.

BOARD18 2.5.7 Release Notes
 
Changes from 2.5.6 Release:
Implemented fix for Issue 115 “Email address is not correct” error
Added configMailTemplate.php for more secure implementation.
Fixed BD18-token-adjust.py
Made various documentation changes.

BOARD18 2.5.6 Release Notes
 
Changes from 2.5.5 Release:
Implemented fix for Issue 94 - Punctuation in game title. 