@@ -28,9 +28,7 @@ function sendEmail($email, $subject, $body) {
   $mailObj->Host = MAIL_HOST;     // Specify the SMTP server.
   $mailObj->Port = MAIL_PORT;     // Specify port. Use 587 for STARTTLS.
   $mailObj->SMTPAuth = true;      // Enable SMTP authentication
-  if (MAIL_TLS == 'Yes') {  // Is TLS required by the SMTP server?
-    $mailObj->SMTPSecure = 'tls';
-  }
+  $mailObj->SMTPSecure = MAIL_TLS; // Is TLS required by the SMTP server?
   $mailObj->Username = MAIL_USER; // SMTP username.
   $mailObj->Password = MAIL_PASS; // SMTP password.
   $mailObj->setFrom(MAIL_SENDER,'BOARD18');
